log/build_2024-10-12_01-09-43/localizer/stderr.log
  File "/home/ionia/Desktop/dubal_ws/install/localizer/lib/python3.8/site-packages/localizer/odometry.py", line 205
    data['y'] = np.float64(msg.position[2]) np.float64(0.0525)
                                            ^
SyntaxError: invalid syntax

